[gd_scene load_steps=29 format=3 uid="uid://bvre6x44opn02"]

[ext_resource type="Script" path="res://scripts/characters/player/PlayerCharacter.gd" id="1_m3ku1"]
[ext_resource type="Script" path="res://scripts/characters/player/player_character_Input_controller.gd" id="3_l78xi"]
[ext_resource type="Texture2D" uid="uid://gqduq135onqj" path="res://assets/Characters/skelet_base.png" id="3_shqle"]
[ext_resource type="PackedScene" uid="uid://bc8fsh41fwsy8" path="res://scenes/base/state_machine.tscn" id="4_nbdno"]
[ext_resource type="Script" path="res://scripts/base/state_machine/states/player/idle_player.gd" id="6_kx72s"]
[ext_resource type="Script" path="res://scripts/base/state_machine/states/player/order_attack.gd" id="7_5pfv7"]
[ext_resource type="Script" path="res://scripts/base/state_machine/states/player/move_player.gd" id="7_ibcgt"]
[ext_resource type="Script" path="res://scripts/base/state_machine/states/player/order-retreat.gd" id="8_2t7yx"]
[ext_resource type="Script" path="res://scripts/base/state_machine/states/allies/skills_ally.gd" id="10_14ah3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_icakc"]
atlas = ExtResource("3_shqle")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rah0"]
atlas = ExtResource("3_shqle")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmmkr"]
atlas = ExtResource("3_shqle")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uco8"]
atlas = ExtResource("3_shqle")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixymq"]
atlas = ExtResource("3_shqle")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdljl"]
atlas = ExtResource("3_shqle")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn2es"]
atlas = ExtResource("3_shqle")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv4rs"]
atlas = ExtResource("3_shqle")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q16eg"]
atlas = ExtResource("3_shqle")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_piqyu"]
atlas = ExtResource("3_shqle")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp17f"]
atlas = ExtResource("3_shqle")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhs5d"]
atlas = ExtResource("3_shqle")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbt2n"]
atlas = ExtResource("3_shqle")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lva3g"]
atlas = ExtResource("3_shqle")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvie"]
atlas = ExtResource("3_shqle")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii62t"]
atlas = ExtResource("3_shqle")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05uaq"]
atlas = ExtResource("3_shqle")
region = Rect2(128, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5blxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icakc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rah0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmmkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uco8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixymq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdljl")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn2es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv4rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q16eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piqyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp17f")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhs5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbt2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lva3g")
}],
"loop": false,
"name": &"order_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jvie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii62t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05uaq")
}],
"loop": false,
"name": &"order_retreat",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b22y5"]
height = 58.0

[node name="PlayerCharacter" type="CharacterBody2D"]
script = ExtResource("1_m3ku1")
health = 300

[node name="CharacterAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5blxn")
animation = &"order_retreat"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b22y5")

[node name="SquadPlacments" type="Node2D" parent="."]

[node name="Top" type="Marker2D" parent="SquadPlacments"]
position = Vector2(0, -100)

[node name="TopRight" type="Marker2D" parent="SquadPlacments"]
position = Vector2(90, -90)

[node name="Right" type="Marker2D" parent="SquadPlacments"]
position = Vector2(100, 0)

[node name="DownRight" type="Marker2D" parent="SquadPlacments"]
position = Vector2(90, 90)

[node name="Down" type="Marker2D" parent="SquadPlacments"]
position = Vector2(0, 100)

[node name="DownLeft" type="Marker2D" parent="SquadPlacments"]
position = Vector2(-90, 90)

[node name="Left" type="Marker2D" parent="SquadPlacments"]
position = Vector2(-100, 0)

[node name="TopLeft" type="Marker2D" parent="SquadPlacments"]
position = Vector2(-90, -90)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.221

[node name="player_state_machine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("4_nbdno")]
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="player_state_machine" node_paths=PackedStringArray("skill_state", "order_attack_state", "order_retreat_state", "move_state")]
script = ExtResource("6_kx72s")
skill_state = NodePath("../skill")
order_attack_state = NodePath("../order_attack")
order_retreat_state = NodePath("../order_retreat")
move_state = NodePath("../move")
animation_name = "idle"

[node name="move" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state", "skill_state", "order_attack_state", "order_retreat_state")]
script = ExtResource("7_ibcgt")
idle_state = NodePath("../idle")
skill_state = NodePath("../skill")
order_attack_state = NodePath("../order_attack")
order_retreat_state = NodePath("../order_retreat")
animation_name = "move"
move_speed = 5.0

[node name="order_attack" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("7_5pfv7")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
animation_name = "order_attack"

[node name="order_retreat" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("8_2t7yx")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
animation_name = "order_retreat"

[node name="skill" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("10_14ah3")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
animation_name = "order_retreat"

[node name="player_input_controller" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("3_l78xi")
parent = NodePath("..")
